Add time reporting

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
   <body>
     <header><h1>Riot Time</h1></header>
     <div class="contain">
+      <app-nav></app-nav>
+    </div>
+    <div class="contain">
+      <time-report></time-report>
+    </div>
+    <div class="contain">
       <div class="sec">
         <entry-form></entry-form>
       </div>
