Add bill selected functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         padding: 12px;
         width: 50%;
       }
+      .billed {
+        color: blue;
+      }
       textarea {
         max-width: 100%;
       }
