--- a/dev/index.html
+++ b/dev/index.html
@@ -6,30 +6,7 @@
     <title>Riot Time</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      label {
-        display: block;
-      }
-      .contain {
-        display: flex;
-        flex-direction: row;
-        width: 75%;
-        margin: 0 auto;
-      }
-      .sec {
-        padding: 12px;
-        width: 50%;
-      }
-      .billed {
-        color: blue;
-      }
-      textarea {
-        max-width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header><h1>Riot Time</h1></header>
@@ -49,10 +26,7 @@
       </div>
     </div>
 
-
-    <script src="https://cdn.jsdelivr.net/riot/3.0/riot.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
-    <script src="js/tags.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
