feat: Add routing

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,16 +14,9 @@
       <app-nav></app-nav>
     </div>
     <div class="contain">
+      <entry-form></entry-form>
       <time-report></time-report>
-    </div>
-    <div class="contain">
-      <div class="sec">
-        <entry-form></entry-form>
-      </div>
-      <div class="sec">
-        <project-list></project-list>
-        <project-add-form></project-add-form>
-      </div>
+      <project-form></project-form>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
