--- a/dev/index.html
+++ b/dev/index.html
@@ -6,18 +6,24 @@
     <title>Riot Time</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
+    <link href="https://fonts.googleapis.com/css?family=Bangers&text=Riot%20Time" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:300,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header><h1>Riot Time</h1></header>
-    <div class="contain">
-      <app-nav></app-nav>
+    <div class="nav-container">
+      <div class="contain">
+        <app-nav></app-nav>
+      </div>
     </div>
-    <div class="contain">
-      <entry-form></entry-form>
-      <time-report></time-report>
-      <project-form></project-form>
-    </div>
+    <main>
+      <div class="contain">
+        <entry-form></entry-form>
+        <time-report></time-report>
+        <project-form></project-form>
+      </div>
+    </main>
 
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script src="js/app.js"></script>
