--- a/dev/index.html
+++ b/dev/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header><h1>Riot Time</h1></header>
+    <header>
+      <div class="contain">
+        <h1>Riot Time</h1>
+      </div>
+    </header>
     <div class="nav-container">
       <div class="contain">
         <app-nav></app-nav>
